%% Verificado el 2026-08-16 contra Production 20260802163710_AddAuditRecordedBy
%% Auditoría commit 10 (docs/reestructura-documentacion): el diseño original de Nucleo 5
%% (DATA-MODEL.md, registro por vaca O por tanque, `lactation_id` auto-resuelto, vinculo con
%% `withdrawal_periods`, `is_sellable`, `milk_quality_tests`) **no se construyo asi**. La tabla
%% real es `milk_yields` (no `milk_records`): `animal_id` es obligatorio (NOT NULL) — no existe
%% la opcion "por tanque sin animal" a nivel de fila — y no tiene `group_id`, `lactation_id`,
%% `is_sellable` ni `withdrawal_period_id`. `milk_quality_tests` no existe en ninguna migracion.
%% Ninguna de las dos brechas esta comprometida en un plan de fase (grep sin resultados en
%% docs/spec/): se retiran en vez de marcarse FUTURO. Lo que si existe es `group_id` a nivel
%% de MILKING_SESSIONS (la sesion completa puede anotarse "de que grupo se ordeño", pero cada
%% fila de leche sigue siendo por animal) y `total_liters` denormalizado en la sesion.
erDiagram
    %% ============================================
    %% NUCLEO 5: PRODUCCION DE LECHE (Fase 1)
    %% ============================================

    MILKING_SESSIONS ||--o{ MILK_YIELDS : "contiene"
    ANIMALS ||--o{ MILK_YIELDS : "vaca (obligatorio; no hay registro por tanque)"
    ANIMAL_GROUPS |o--o{ MILKING_SESSIONS : "sesion asociada a un grupo (opcional)"
    USERS |o--o{ MILKING_SESSIONS : "registrada por"

    MILKING_SESSIONS {
        uuid id PK
        date date "columna real; no session_date"
        varchar shift "am / pm / unica; columna real: shift, no session_slot"
        uuid group_id FK "nullable; de que grupo se ordeño"
        numeric total_liters "total denormalizado de la sesion"
        uuid recorded_by_id FK "nullable"
        varchar recorded_by_label
        text notes "nullable"
        timestamptz created_at
    }

    MILK_YIELDS {
        uuid id PK
        uuid milking_session_id FK
        uuid animal_id FK "obligatorio; NOT NULL en la tabla real"
        numeric liters "decimal"
        timestamptz created_at
    }

    ANIMALS {
        uuid id PK
    }
    ANIMAL_GROUPS {
        uuid id PK
    }
    USERS {
        uuid id PK
    }

    %% NOTA: LACTATIONS (Nucleo 4) y WITHDRAWAL_PERIODS (Nucleo 2) existen como tablas propias
    %% pero MILK_YIELDS no tiene FK hacia ninguna de las dos — la regla "leche en retiro no se
    %% vende" y la curva de lactancia descritas en DATA-MODEL.md no estan conectadas en el
    %% esquema real. MILK_QUALITY_TESTS no existe en absoluto.
